# Machine_Learner_App_AI

./: CMakeLists.txt  Commands to start the thing again  README.md
cpp/: simplecalc.cpp
gui/: app.py
